Fix checkbox styling issue on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -678,7 +678,7 @@ label {
 	@media (min-width: $screen-md-min) {
 	}
 
-	input,
+	input[type=text],
 	textarea {
 		border: 1px solid lighten($sticky-dark-light, 40%);
 		padding: 30px 20px;
